src/objects/PartnerAccountCommission__c.object
<CustomObject>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <referenceTo>VisionCareSalesCommission__c</referenceTo>
        <relationshipLabel>Partner Accounts</relationshipLabel>
        <relationshipName>Partner_Account_Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Account Commissions</relationshipLabel>
        <relationshipName>Partner_Account_Commissions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Partner Account Commission</label>
    <nameField>
        <displayFormat>PAC-{0000}</displayFormat>
        <label>Partner Account Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Account Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>